objects/UNITY_GL_Matrix__c.object
<CustomObject>
    <description>Maps type and activity type pairs to credit and debit accounts for posting transactions in SL</description>
    <fields>
        <fullName>UNITY_Activity_Type__c</fullName>
        <description>The Order/Invoice Line Activity Type</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UNITY_Line_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Asset Mgmt Fees</fullName>
                </value>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Destination Credit</fullName>
                </value>
                <value>
                    <fullName>Double Time Labor</fullName>
                </value>
                <value>
                    <fullName>Double Time Travel</fullName>
                </value>
                <value>
                    <fullName>Field Supplies</fullName>
                </value>
                <value>
                    <fullName>Freight - New Construction</fullName>
                </value>
                <value>
                    <fullName>Freight - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Holiday Labor</fullName>
                </value>
                <value>
                    <fullName>Holiday Travel</fullName>
                </value>
                <value>
                    <fullName>Overtime Labor</fullName>
                </value>
                <value>
                    <fullName>Overtime Travel</fullName>
                </value>
                <value>
                    <fullName>Parts - New Construction</fullName>
                </value>
                <value>
                    <fullName>Parts - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Pass Through Freight</fullName>
                </value>
                <value>
                    <fullName>Pass Through Labor</fullName>
                </value>
                <value>
                    <fullName>Pass Through Parts</fullName>
                </value>
                <value>
                    <fullName>Pass Through Rentals</fullName>
                </value>
                <value>
                    <fullName>Pass Through Tax</fullName>
                </value>
                <value>
                    <fullName>Permits and Licenses</fullName>
                </value>
                <value>
                    <fullName>Preventative Maintenance</fullName>
                </value>
                <value>
                    <fullName>Rental - Equipment</fullName>
                </value>
                <value>
                    <fullName>Rental - New Construction</fullName>
                </value>
                <value>
                    <fullName>Rental - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Service Charge</fullName>
                </value>
                <value>
                    <fullName>Service Fee</fullName>
                </value>
                <value>
                    <fullName>Standard Labor</fullName>
                </value>
                <value>
                    <fullName>Standard Travel</fullName>
                </value>
                <value>
                    <fullName>Use Tax</fullName>
                </value>
                <value>
                    <fullName>Vendor Double Time Labor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Cost_Account__c</fullName>
        <description>The credit account that the cost in the purchase order is posted to</description>
        <label>Cost Account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Line_Type__c</fullName>
        <description>The Order/Invoice Line Type</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Labor - Installation</fullName>
                </value>
                <value>
                    <fullName>Labor - Service</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Permits and Licenses</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Service Fee</fullName>
                </value>
                <value>
                    <fullName>Stock Receipt (Restocking)</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Vendor Services</fullName>
                </value>
                <value>
                    <fullName>Non Billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>PMA</fullName>
                </value>
                <value>
                    <fullName>PMO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Revenue_Account__c</fullName>
        <description>The revenue account the line invoice line gets posted to</description>
        <label>Revenue Account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Tax_Account__c</fullName>
        <description>The tax account in which the tax in an invoice gets posted to</description>
        <label>Tax Account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>GL Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UNITY_Order_Type__c</columns>
        <columns>UNITY_Line_Type__c</columns>
        <columns>UNITY_Activity_Type__c</columns>
        <columns>UNITY_Revenue_Account__c</columns>
        <columns>UNITY_Cost_Account__c</columns>
        <columns>UNITY_Tax_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>UNITY_Order_Type__c</columns>
        <columns>UNITY_Line_Type__c</columns>
        <columns>UNITY_Activity_Type__c</columns>
        <columns>UNITY_Revenue_Account__c</columns>
        <columns>UNITY_Cost_Account__c</columns>
        <columns>UNITY_Tax_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GLME-{0000}</displayFormat>
        <label>GL Matrix Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>